# markdown_workspace

./: .dockerignore  .gitignore  .npmrc  AGENTS.md  AGENT_NOTES.md  App.tsx  CHECKLIST.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PHASE_10_CHECKPOINT_SUMMARY.md  PHASE_12_CHECKPOINT_SUMMARY.md  PHASE_16_CHECKPOINT_SUMMARY.md  PHASE_18_CHECKPOINT_SUMMARY.md  PHASE_19_CHECKPOINT_SUMMARY.md  PHASE_1_CHECKPOINT_SUMMARY.md  PHASE_2_CHECKPOINT_SUMMARY.md  PHASE_5_CHECKPOINT_SUMMARY.md  PHASE_8_CHECKPOINT_SUMMARY.md  README.md  STYLE_GUIDE.md  TEST_LOOP_WORKFLOW.md  agents.md  constants.ts  docker-compose.dev.yml  docker-compose.yml  index.html  index.tsx  package-lock.json  package.json  playwright.config.ts  playwright.file-inline.config.ts  playwright.file.config.ts  playwright.inline.config.ts  playwright.phase17.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json
.changeset/: README.md  config.json  legacy-bridge-packages.md  phase13-client-rc.md  phase13-editor-rc.md  phase13-extension-rc.md  phase13-renderer-rc.md  phase13-shared-theme-rc.md  workspace-module-package-split.md
.codex/: config.toml
.playwright-mcp/: page-2026-05-01T20-57-42-803Z.yml  page-2026-05-04T06-38-19-175Z.yml  page-2026-05-04T06-56-56-239Z.yml  page-2026-05-04T07-12-20-792Z.yml  page-2026-05-04T07-57-51-875Z.yml  page-2026-05-04T07-58-30-210Z.yml  page-2026-05-04T07-58-38-213Z.yml  page-2026-05-04T08-01-03-610Z.yml  page-2026-05-04T08-01-14-743Z.yml  (+48 more)
staticserve/: DEPRECATED.md  Dockerfile  pyproject.toml
staticserve/staticserve/: __init__.py  app.py
(+2666 files in other folders)
